-add the class tags for the 'NEXT FACT' button -incrased the app store button size in different screens -adjusted the top headline font size and line height in different screens -adjusted the spacing of the text message tip to make it displays above the brush -made the Instagram card fixed in height, linked the Instagram image to the Instagram page -adjusted the spacing of the bullet points for the "You Are Strong Enough" card -adjusted the method to realize the button animation to match better with the counterpart

--- a/smokefree/sites/all/modules/custom/icf_lgbt_app/src/appshell/AppHeader/AppHeader.css
+++ b/smokefree/sites/all/modules/custom/icf_lgbt_app/src/appshell/AppHeader/AppHeader.css
@@ -4,7 +4,7 @@ h1{
     font-family: 'Montserrat', sans-serif !important;
     font-weight: 900 !important;
     font-size: 65px !important;
-    line-height: 70px !important;
+    line-height: 60px !important;
     color: #ffffff !important;
     text-transform: uppercase !important;
     text-align: left;
@@ -15,6 +15,7 @@ h1{
     font-weight: 900 !important;
     font-size: 65px !important;
 }
+
 
 
 .appheader{
@@ -51,5 +52,25 @@ h1{
 
     .mobileHide{
         display: none;
+    }
+}
+@media screen and (min-width:600px) and (max-width: 768px){
+    h1{
+        font-size: 42px !important;
+        line-height: 40px !important;
+    }
+    .highLight, h1{
+        font-size: 42px !important;
+        line-height: 40px !important;       
+    }
+}
+@media screen and (max-width:600px){
+    h1{
+        font-size: 30px !important;
+        line-height: 30px !important;
+    }
+    .highLight, h1{
+        font-size: 30px !important;
+        line-height: 30px !important;       
     }
 }
