--- a/smokefree/sites/all/modules/custom/icf_lgbt_app/src/appshell/LearnAbout/LearnAbout.css
+++ b/smokefree/sites/all/modules/custom/icf_lgbt_app/src/appshell/LearnAbout/LearnAbout.css
@@ -5,14 +5,16 @@
     padding: 15px;
     min-height: 535px;
 }
+@media screen and (max-width:768px){
+    .learnabout{
+        min-height: auto !important;
+    }
+}
 .learnabout a{
     color: #333333 !important;
 }
 
-.learnabout .button:hover{
-    color: #ffffff !important;
-    border: 2px solid #000000;
-}
+
 .learnabout .button:before{
     content: "";
     position: absolute;
@@ -23,15 +25,14 @@
     height: 0;
     border-bottom: 20px solid #9f48f9;
     border-left: 20px solid transparent;
-    transition: all 0.1s ease-in;
+    transition: all 0.2s ease-in;
+
 }
-.learnabout .button:hover:before{
-    width: 100%;
-    height: 100%;
-    right: 0;
-    bottom: 0;
-    background-color: #9f48f9;
-}
+
+.learnabout .button-transition:after {
+    background: #9f48f9 !important;
+
+  }
 .buttonText{
     z-index: 10;
     display:block; 
